# signal

./: .gitignore  CMakeLists.txt  README.md  算法知识目录.md  运行流程.md
cmake/: signal_lib-config.cmake.in
demo/: CMakeLists.txt
demo/src/: communication_demo.cpp  main.cpp  signal_analysis_demo.cpp  underwater_demo.cpp
examples/: svp_example.c
src/acoustic/: parabolic_equation.c  parabolic_equation.cpp  passive_sonar.c  passive_sonar.cpp  ray_direction.c  ray_direction.cpp  sound_field_computation.cpp  sound_velocity.c  sound_velocity.cpp
src/core/: core.cpp
src/include/: signal_lib.h  signal_lib.hpp  signal_struct.hpp
src/processing/: feature_extraction.c  feature_extraction.cpp  matched_filter.c  matched_filter.cpp  spectrum_analysis.c  spectrum_analysis.cpp
src/signal/: advanced_signal_generation.cpp  signal_generation.c  signal_generation.cpp
src/utils/: enhanced_math.cpp  signal_utils.c  signal_utils.cpp
